--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <rest.assured.version>4.2.0</rest.assured.version>
         <assertj-core.version>3.20.2</assertj-core.version>
         <jackson-databind.version>2.10.5.1</jackson-databind.version>
+        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
     </properties>
 
     <dependencies>
@@ -44,4 +45,14 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
